--- a/index.html
+++ b/index.html
@@ -1,1 +1,70 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Academic Profile</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+        }
+        .container {
+            max-width: 800px;
+            margin: auto;
+        }
+        .photo {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        .photo img {
+            max-width: 150px;
+            border-radius: 50%;
+        }
+        h1, h2 {
+            color: #333;
+        }
+        .section {
+            margin-bottom: 30px;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <div class="photo">
+            <img src="path/to/photo.jpg" alt="Your Photo">
+        </div>
+        <h1>Your Name</h1>
+        <p>Academic and Researcher, Teacher</p>
+
+        <div class="section">
+            <h2>Research Papers</h2>
+            <ul>
+                <li>Paper Title 1 - <i>Journal Name, Year</i></li>
+                <li>Paper Title 2 - <i>Journal Name, Year</i></li>
+                <!-- Add more research papers here -->
+            </ul>
+        </div>
+
+        <div class="section">
+            <h2>Grants Approved</h2>
+            <ul>
+                <li>Grant Title 1 - <i>Funding Agency, Year</i></li>
+                <li>Grant Title 2 - <i>Funding Agency, Year</i></li>
+                <!-- Add more grants here -->
+            </ul>
+        </div>
+
+        <div class="section">
+            <h2>Classes Taught</h2>
+            <ul>
+                <li>Class Name 1 - <i>Institution, Year</i></li>
+                <li>Class Name 2 - <i>Institution, Year</i></li>
+                <!-- Add more classes taught here -->
+            </ul>
+        </div>
+
+        <!-- Add more sections as needed -->
+    </div>
+</body>
+</html>
